feat: add update password handler
